[gd_scene load_steps=10 format=3 uid="uid://dpj7vmabyhis5"]

[ext_resource type="SpriteFrames" uid="uid://c0g2q05rvaebp" path="res://assets/BoxPig.tres" id="1_m1q8u"]
[ext_resource type="SpriteFrames" uid="uid://bp4wobaeyk1ss" path="res://assets/Box.tres" id="2_q5g4q"]
[ext_resource type="Script" path="res://scripts/BoxThrowerPig.gd" id="3_6tl01"]
[ext_resource type="SpriteFrames" uid="uid://8dtyc4ho3v8p" path="res://assets/Dialogue.tres" id="4_jte0a"]
[ext_resource type="AudioStream" uid="uid://dp0ndmrvyxtsn" path="res://assets/sounds/10_Battle_SFX/03_Claw_03.wav" id="5_6masu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5hm3"]
size = Vector2(19, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rtlag"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3nrld"]
size = Vector2(18, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2g17"]
size = Vector2(138, 360.5)

[node name="BoxThrower" type="Node2D" groups=["mobs"]]

[node name="StaticBoxBody" type="StaticBody2D" parent="."]

[node name="StaticBox" type="AnimatedSprite2D" parent="StaticBoxBody"]
texture_filter = 1
position = Vector2(40, -8)
sprite_frames = ExtResource("2_q5g4q")
animation = &"Idle"
metadata/_aseprite_wizard_config_ = {
"layer": "Cannon",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"source": "res://assets/Aseprite/09-Box.aseprite"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBoxBody"]
position = Vector2(39.5, 0)
shape = SubResource("RectangleShape2D_c5hm3")

[node name="Pig" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_6tl01")

[node name="BodyCollision" type="CollisionShape2D" parent="Pig"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_rtlag")

[node name="Sprite" type="AnimatedSprite2D" parent="Pig"]
texture_filter = 1
sprite_frames = ExtResource("1_m1q8u")
animation = &"Idle"
frame_progress = 0.832252
metadata/_aseprite_wizard_config_ = {
"layer": "Pig",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"source": "res://assets/Aseprite/04-PigBox.aseprite"
}

[node name="Dialogue" type="AnimatedSprite2D" parent="Pig"]
visible = false
texture_filter = 1
position = Vector2(0, -24)
sprite_frames = ExtResource("4_jte0a")
animation = &"#!?"
frame = 4
frame_progress = 1.0
metadata/_aseprite_wizard_config_ = {
"layer": "Cannon",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"source": "res://assets/Aseprite/13-Dialogue.aseprite"
}

[node name="Area2D" type="Area2D" parent="Pig"]

[node name="HitCollision" type="CollisionShape2D" parent="Pig/Area2D"]
position = Vector2(0, -12.25)
shape = SubResource("RectangleShape2D_3nrld")

[node name="TriggerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(-32, 179.75)
shape = SubResource("RectangleShape2D_d2g17")

[node name="SoundDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_6masu")

[connection signal="body_entered" from="Pig/Area2D" to="Pig" method="_on_hit_area_2d_body_entered"]
[connection signal="body_entered" from="TriggerArea" to="Pig" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="Pig" method="_on_area_2d_body_exited"]
